--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,7 @@
 @import "room_grid.scss";
 @import "contact_us.scss";
 @import "reservation.scss";
+@import "offers.scss";
 
 
 @import "index.scss";
