--- a/scss/_general_properties.scss
+++ b/scss/_general_properties.scss
@@ -1,15 +1,29 @@
 // GENERAL PROPERTIES
+
+// FONTS
 @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT&family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/*
+    font-family: 'Archivo', sans-serif;
+    font-family: 'Old Standard TT', serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
+*/
+
+$archivo: 'Archivo', sans-serif;
+$oldStd: 'Old Standard TT', serif;
+$poppins: 'Poppins', sans-serif;
+$roboto: 'Roboto', sans-serif;
 
 *{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-size: 1em;
-   font-family: 'Roboto', sans-serif;
    position: relative;
    font-size: 0.94em;
    z-index: 2;
+//    font-family: 'Roboto', sans-serif;
 //    font-family: 'Old Standard TT', serif;
 }
 
@@ -23,13 +37,13 @@ $grey: #777777;
 $grey_light: #cacaca;
 $grey_light_2: #DBDBDB;
 $grey_light_3: #F8F8F8;
-$brown: #BEAD8E;
+$brown: #BDAC8D;
 $brown_light: #CCC2BE;
 $hm: #F7F7F7;
 
 // FONT SIZES
-$main_titles_d: 4.5em;
-$main_subtitles_d: 1.6em;
+$main_titles_d: 4.5rem;
+$main_subtitles_d: 1.6rem;
 
 $desktop: 1024px;
 
@@ -78,12 +92,14 @@ ul{
 .button{
     color: #fff;
     padding: 12px 24px;
-    font-size: 0.95em;
+    font-size: 0.7em;
     border: 0px;
     letter-spacing: 1px;
     text-transform: uppercase;
     font-weight: bold;
     cursor: pointer;
+    font-family: $archivo;
+
     @media only screen and (min-width: $desktop) {
         color: #fff;
         background-color: transparent;
@@ -130,6 +146,7 @@ body, html{
    padding: 0;
    width: 100%;
    overflow-x: hidden;
+   scroll-behavior: smooth;
 }
 
 // HEADER
@@ -212,6 +229,8 @@ header{
                 width: 0;
                 overflow: hidden;
                 list-style-type: none; 
+                font-weight: bold;
+                font-family: $archivo;
                 @media only screen and (min-width: $desktop) {
                     flex-direction: row;
                     overflow: hidden;
@@ -268,6 +287,7 @@ header{
                 display: none;
                 // margin-left: auto;
                 // margin-right: auto;
+                font-family: $archivo;
                 @media only screen and (min-width: $desktop) {
                     display: flex;
                     justify-content: center;
@@ -310,7 +330,7 @@ header{
                 flex-direction: row;
                 justify-content: flex-end;
                 width: 40%;
-                font-size: 1.4em;
+                font-size: 1.4em;          
 
                 .container_headerInfo_phone, .container_headerInfo_email{
                     display: flex;                 
@@ -356,11 +376,14 @@ header{
                     .title{
                         font-size: 1em;
                         margin-bottom: 6px;
+                        font-weight: bold;
+                        font-family: $archivo;
                     }
 
                     .data{
                         font-size: 0.9em;
                         letter-spacing: 1px;
+                        font-family: $oldStd;
                     }
                 }
             }
@@ -388,42 +411,37 @@ header{
             background-color: #fff;
             color: $grey_dark;
             margin-right: 15px;
+            font-family: $archivo;
+            .bold{
+                font-weight: bold;
+            }
         }
     }
- 
-    // .container_headerInfo{
-    //    display: flex;
- 
-    //    .container_headerInfo_phone, .container_headerInfo_email{
-    //         display: flex;
-    //         &:first-child{
-    //             margin-right: 20px;
-    //         }
-    
-    //         .fakeIcon{
-    //             display: flex;
-    //             justify-content: center;
-    //             align-items: center;
-    //             position: relative;
-    //             border-radius: 6px;
-    //             width: 24px;
-    //             height: 24px;
-    //             // border: 1px solid red;
-    //             background-color: $brown;
-    //             margin-right: 12px;
-    
-    //             .fakeIcon_top{
-    //                 position: absolute;
-    //             }
-    //         }
-    
-    //         .info{
-    //             div:first-child{
-    //                 margin-bottom: 2.5px;
-    //             }
-    //         }
-    //     }
-    // }
+}
+
+// ANCHOR TO TOP
+.anchorTop {
+    display: none;
+    @media only screen and (min-width: $desktop) {
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        bottom: 20px;
+        right: 20px;
+        padding: 10px 12px;
+        background: rgba(0,0,0,.3);
+        border-radius: 6px;
+        height: 60px;
+        width: 60px;
+        font-size: 2.5em;
+        z-index: 100;
+
+        &:hover {
+            text-decoration: none;
+            background: rgba(0,0,0,.5);
+        }
+    }
 }
 
 // FOOTER
@@ -442,7 +460,7 @@ footer{
         height: fit-content;
         font-size: 1.7em;
         flex-wrap: wrap;
-        padding: 100px 50px 75px 50px;
+        padding: 50px 15% 50px 15%;
         margin-top: 120px;
     }
 
@@ -450,12 +468,25 @@ footer{
         font-size: 0.7em;
         width: 40%;
         padding-right: 20px;
+        font-weight: bold;
+        font-family: $roboto;
+        @media only screen and (min-width: $desktop) {
+            font-size: 0.7em;
+            width: 100%;
+            text-align: center;
+        }
     }
 
     .body{
         display: none;
         width: 100%;
         font-size: 0.55em;
+
+        @media only screen and (min-width: $desktop) {
+            display: flex;  
+            justify-content: space-between;    
+            align-items: center;     
+        }
 
         .logo_section{
             width: 22.5%;
@@ -465,6 +496,7 @@ footer{
             .logo_title{
                 display: flex;
                 margin-bottom: 40px;
+                font-family: $archivo;
                 
                 .logo{
                     display: flex;
@@ -481,16 +513,31 @@ footer{
 
                 .title{
                     font-size: 2em;
+                    @media only screen and (min-width: $desktop) {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        line-height: 1.4;
+                    }
+
                     span{
                         display: block;
                         font-weight: bold;
                     }
                 }
             }
+
+            p{
+                font-family: $archivo;
+                @media only screen and (min-width: $desktop) {
+                    font-size: 1em;
+                }
+            }
         }
 
         .services_section{        
             width: 50%;
+            display: none;
 
             ul{
                 display: flex;
@@ -520,11 +567,16 @@ footer{
         }
 
         .contactUs_section{
+            @media only screen and (min-width: $desktop) {
+                width: 30%;
+                padding-top: 70px; ;
+            }
 
             & > .title{
                 margin-bottom: 30px;
                 font-size: 1.9em;
                 text-transform: none;
+                font-family: $oldStd;
             }
 
             .contacts{
@@ -543,25 +595,34 @@ footer{
                     }
 
                     .info_container{
+                        width: 100%;
 
                         .title{
                             margin: 0;
                             margin-bottom: 10px;
                             text-transform: none;
                             font-size: 1.4em;
+                            font-family: $oldStd;
+                            @media only screen and (min-width: $desktop) {
+                                font-size: 1.6em;
+                                font-weight: bold;
+                            }
                         }
 
-                        .title{
+                        .info{
                             font-size: 1.2em;
+                            text-transform: lowercase;
+                            font-family: $roboto;
+                            @media only screen and (min-width: $desktop) {
+                                font-size: 1.5em;
+                            }
                         }
                     }
                 }
             }
         }
 
-        @media only screen and (min-width: $desktop) {
-            display: flex;           
-        }
+        
     }
     
     .rrss{
@@ -569,7 +630,7 @@ footer{
         width: 56%;
         font-size: 1.2em;
         @media only screen and (min-width: $desktop) {
-            font-size: 1.5em;
+            font-size: 2.5em;
             width: 15%;
         }
 
