--- a/scss/contact_us.scss
+++ b/scss/contact_us.scss
@@ -9,6 +9,12 @@
         @media only screen and (min-width: $desktop) {
             display: flex;
             flex-direction: column;
+
+            & > div, & > section{
+                padding-left: 20vw;
+                padding-right: 20vw;
+                width: 100vw;
+             }
         }
 
     
@@ -35,17 +41,6 @@
                 font-size: 1.7em;
                 margin: 0;
                 margin-bottom:60px;
-            }
-
-            .overlap_main_header{
-                // position: absolute;
-                // height: 100%;
-                // width: 100%;
-                // top: 0;
-                // left: 0;
-                // background-color: #111;
-                // opacity: 0.8;
-                // z-index: 2;
             }
 
             .banner{
@@ -75,11 +70,12 @@
 
         // USER CONTACT FORM
         #userContactForm{
+            font-family: $archivo;
+
             @media only screen and (min-width: $desktop) {
                 display: flex;
                 flex-wrap: wrap;
-                font-size: 1.4em;
-                width: 70%;
+                font-size: 1.8em;
                 padding: 60px 5%;
                 margin-top: 60px;
                 margin-left: auto;
@@ -188,6 +184,9 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
+                @media only screen and (min-width: $desktop) {
+                    font-size: 1.5rem;
+                }
             }
 
         }// userContactForm
@@ -198,6 +197,7 @@
             margin-left: auto;
             margin-right: auto;
             @media only screen and (min-width: $desktop) {
+                width: 100%;
                 display: flex;
                 justify-content: space-between;
                 flex-wrap: wrap;
@@ -228,13 +228,16 @@
                 @media only screen and (min-width: $desktop) {
                     width: 30%;
                     margin: 60px 0; 
+                    padding-left: 15px;
                 }
-    
 
                 .icon-grid {
                     font-size: 1.7em;
                     color: rgb(211, 183, 150);
                     margin-top: 10px;
+                    @media only screen and (min-width: $desktop) {
+                        font-size: 2.2rem;
+                    }
                 }
 
                 .text-grid{
@@ -244,10 +247,18 @@
                         font-size: 1.6em;
                         font-family: 'Old Standard TT', serif;
                         margin-bottom: 5px;
+                        font-family: $oldStd;
+                        @media only screen and (min-width: $desktop) {
+                            font-size: 2rem;
+                        }
                     }
 
                     .info{
                         font-size: 1.1em;
+                        font-family: $roboto;
+                        @media only screen and (min-width: $desktop) {
+                            font-size: 1rem;
+                        }
 
                         p{
                             &:first-of-type{
@@ -268,13 +279,14 @@
             @media only screen and (min-width: $desktop) {
                 display: none;
                 height: 65vh;
-                width: 70%;
+                margin: 0;
+                padding-left: 20.5vw;
             }
 
             &.desktop{
                 display: none;
                 @media only screen and (min-width: $desktop) {
-                    display: block;
+                    display: flex;
                 }
             }
             
