--- a/scss/_general_properties.scss
+++ b/scss/_general_properties.scss
@@ -435,6 +435,7 @@ header{
         height: 60px;
         width: 60px;
         font-size: 2.5em;
+        color: #fff;
         z-index: 100;
 
         &:hover {
